--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -14,3 +14,5 @@ steps:
 - name: maven:3.8.7-eclipse-temurin-19
   entrypoint: mvn
   args: ['clean', 'test', '-f', './payments/']
+options:
+  env: ['STRIPE_API_KEY=pk_test_51Hjqs3AWdvlSRNTQLglcfTf08dgs2zwg9wakXv59I8pu2wpKoM6PEvOrd2fAggxR7USrBxcwQjd1Bj4BXjfkQ9WX00K0f1dxXE']
