--- a/catalog/Dockerfile
+++ b/catalog/Dockerfile
@@ -1,5 +1,10 @@
-FROM eclipse-temurin:17
+FROM maven:3.8.7-eclipse-temurin-19 AS build
+COPY src /home/app/src
+COPY pom.xml /home/app
+RUN mvn -f /home/app/pom.xml clean package
+
+FROM eclipse-temurin:19
 WORKDIR /opt
 EXPOSE 8080
-COPY target/*.jar /opt/app.jar
-CMD ["java", "-jar", "/opt/app.jar"]
+COPY --from=build /home/app/target/*.jar /opt/app.jar
+CMD java -jar /opt/app.jar
