--- a/.cloudbuild/publish.yaml
+++ b/.cloudbuild/publish.yaml
@@ -6,8 +6,16 @@ steps:
 - name: 'gcr.io/cloud-builders/docker'
   args: [ 'build', '-t', 'gcr.io/yb-americas-presales/github.com/btjimerson/frontend:$TAG_NAME', './frontend' ]
 - name: 'gcr.io/cloud-builders/docker'
+  args: [ 'image', 'push', 'gcr.io/yb-americas-presales/github.com/btjimerson/frontend:$TAG_NAME']
+- name: 'gcr.io/cloud-builders/docker'
   args: [ 'build', '-t', 'gcr.io/yb-americas-presales/github.com/btjimerson/orders:$TAG_NAME', './orders' ]
+- name: 'gcr.io/cloud-builders/docker'
+  args: [ 'image', 'push', 'gcr.io/yb-americas-presales/github.com/btjimerson/orders:$TAG_NAME']
 - name: 'gcr.io/cloud-builders/docker'
   args: [ 'build', '-t', 'gcr.io/yb-americas-presales/github.com/btjimerson/payments:$TAG_NAME', './payments' ]
 - name: 'gcr.io/cloud-builders/docker'
+  args: [ 'image', 'push', 'gcr.io/yb-americas-presales/github.com/btjimerson/payments:$TAG_NAME']
+- name: 'gcr.io/cloud-builders/docker'
   args: [ 'build', '-t', 'gcr.io/yb-americas-presales/github.com/btjimerson/payment-history:$TAG_NAME', './payment-history' ]
+- name: 'gcr.io/cloud-builders/docker'
+  args: [ 'image', 'push', 'gcr.io/yb-americas-presales/github.com/btjimerson/payment-catalog:$TAG_NAME']
